--- a/spotter/Storyboards/ConfirmTweet.storyboard
+++ b/spotter/Storyboards/ConfirmTweet.storyboard
@@ -17,21 +17,66 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tweet確認画面" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N8d-Ab-y2L">
-                                <rect key="frame" x="129" y="323" width="116" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="793-5d-Edp" customClass="TweetTextView" customModule="spotter" customModuleProvider="target">
+                                <rect key="frame" x="20" y="101" width="335" height="208"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <accessibility key="accessibilityConfiguration" identifier="tweetTextField"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="208" id="F7v-Kg-clZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wG3-Mx-HDm" customClass="RoundRectButton" customModule="spotter" customModuleProvider="target">
+                                <rect key="frame" x="219" y="368" width="136" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="136" id="63f-GL-dYL"/>
+                                    <constraint firstAttribute="height" constant="56" id="AMP-CN-OtY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="エモート"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="buttonColor">
+                                        <color key="value" red="0.072392590339999993" green="0.82331436869999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="textColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="793-5d-Edp" firstAttribute="leading" secondItem="hx8-uq-IDW" secondAttribute="leading" constant="20" id="G46-Cf-E4i"/>
+                            <constraint firstItem="793-5d-Edp" firstAttribute="top" secondItem="hx8-uq-IDW" secondAttribute="top" constant="37" id="GKr-16-MMe"/>
+                            <constraint firstItem="hx8-uq-IDW" firstAttribute="trailing" secondItem="wG3-Mx-HDm" secondAttribute="trailing" constant="20" id="HLX-6E-R18"/>
+                            <constraint firstItem="wG3-Mx-HDm" firstAttribute="top" secondItem="793-5d-Edp" secondAttribute="bottom" constant="59" id="bQt-3u-ojg"/>
+                            <constraint firstItem="hx8-uq-IDW" firstAttribute="trailing" secondItem="793-5d-Edp" secondAttribute="trailing" constant="20" id="lbZ-jx-ATW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="hx8-uq-IDW"/>
                     </view>
+                    <navigationItem key="navigationItem" id="eoA-yU-125">
+                        <barButtonItem key="rightBarButtonItem" title="Home" id="FE5-Fh-pvn"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wW0-tY-9mw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-15" y="149"/>
+            <point key="canvasLocation" x="-15.199999999999999" y="148.87556221889056"/>
         </scene>
     </scenes>
 </document>
