--- a/spotter/Storyboards/ConfirmTweet.storyboard
+++ b/spotter/Storyboards/ConfirmTweet.storyboard
@@ -20,7 +20,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="793-5d-Edp" customClass="TweetTextView" customModule="spotter" customModuleProvider="target">
                                 <rect key="frame" x="20" y="101" width="335" height="208"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <accessibility key="accessibilityConfiguration" identifier="tweetTextField"/>
+                                <accessibility key="accessibilityConfiguration" identifier="confirmTweetTextField"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="208" id="F7v-Kg-clZ"/>
                                 </constraints>
