--- a/spotter/Classes/Views/TimeLineTableViewCell.xib
+++ b/spotter/Classes/Views/TimeLineTableViewCell.xib
@@ -13,15 +13,16 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="145" id="KGk-i7-Jjw" customClass="TimelineTableViewCell" customModule="spotter" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="453" height="145"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="146" id="KGk-i7-Jjw" customClass="TimelineTableViewCell" customModule="spotter" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="453" height="146"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="453" height="144.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="453" height="145.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fKs-ic-Fvb">
                         <rect key="frame" x="16" y="17" width="126" height="109"/>
+                        <accessibility key="accessibilityConfiguration" identifier="faceImageView"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="109" id="6m3-qQ-N2p"/>
                             <constraint firstAttribute="width" constant="126" id="qN1-i8-tQK"/>
@@ -30,6 +31,7 @@
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ug9-Hw-OoP">
                         <rect key="frame" x="157" y="7" width="288" height="131"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <accessibility key="accessibilityConfiguration" identifier="emoteTextBox"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Ug9-Hw-OoP" secondAttribute="height" multiplier="288:131" id="VAa-B5-YmH"/>
                             <constraint firstAttribute="width" secondItem="Ug9-Hw-OoP" secondAttribute="height" multiplier="288:131" id="td1-uL-iP8"/>
@@ -53,7 +55,7 @@
                 <outlet property="faceImageView" destination="fKs-ic-Fvb" id="7Rm-bw-XBb"/>
                 <outlet property="tweetText" destination="Ug9-Hw-OoP" id="yiQ-lA-nhg"/>
             </connections>
-            <point key="canvasLocation" x="108.5" y="-128.5"/>
+            <point key="canvasLocation" x="108.5" y="-129"/>
         </tableViewCell>
     </objects>
 </document>
