--- a/spotter/Storyboards/TimeLine.storyboard
+++ b/spotter/Storyboards/TimeLine.storyboard
@@ -41,7 +41,9 @@
                             </tableView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="komei" translatesAutoresizingMaskIntoConstraints="NO" id="8tI-pk-sOX">
                                 <rect key="frame" x="16" y="23" width="152" height="137"/>
-                                <accessibility key="accessibilityConfiguration" identifier="profileImage"/>
+                                <accessibility key="accessibilityConfiguration" identifier="profileImage">
+                                    <bool key="isElement" value="YES"/>
+                                </accessibility>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="137" id="91F-5i-YCE"/>
                                     <constraint firstAttribute="width" constant="152" id="I8a-Pd-KIR"/>
@@ -50,7 +52,7 @@
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@komei_22" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qfY-5c-7vu">
                                 <rect key="frame" x="16" y="192" width="88" height="20.5"/>
-                                <accessibility key="accessibilityConfiguration" identifier="useridLavel"/>
+                                <accessibility key="accessibilityConfiguration" identifier="useridLabel"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -88,7 +90,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qUH-dO-jWr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-435" y="-45"/>
+            <point key="canvasLocation" x="-690" y="-61"/>
         </scene>
     </scenes>
     <resources>
